@@ -126,6 +126,14 @@ public interface BootstrapInitializer {
 	void initMandatoryData() throws JsonParseException, JsonMappingException, IOException, MeshSchemaException;
 
 	/**
+	 * Setup the optional data. Optional data will only be setup during the first setup. Mesh will not try to recreate those elements on each setup. The
+	 * {@link #initMandatoryData()} method on the other hand will setup elements which must exist and thus will enforce creation of those elements.
+	 * 
+	 * @param isEmptyInstallation
+	 */
+	void initOptionalData(boolean isEmptyInstallation);
+
+	/**
 	 * Initialise mesh using the given configuration.
 	 * 
 	 * This method will startup mesh and take care of tasks which need to be executed before the REST endpoints can be accessed.
