@@ -4,12 +4,13 @@
 
 == 0.9.7 (PENDING)
 
+icon:plus[] Auth: Support for anonymous access has been added to mesh. Requests which do not provide a `mesh.token` will automatically try to use the `anonymous` user. This user is identified by `username` and the thus no anonymous access support is provided if the user can't be located.
 
 icon:plus[] GraphQL: It is now possible to retrieve the path for a content using the `path` field. The `Node.languagePaths` has been removed in favour of this new field.
 
 icon:plus[] GraphQL: Contents can now directly be queried via the `contents` field.
 
-icon:plus[] Core: It is now possible to issue API keys via the `GET /api/v1/users/:userUuid/apiKey` endpoint. API keys do not expire and work in conjunction with the regular JWT authentication mechanism. These keys should only be used when SSL is enabled. The `DELETE /api/v1/users/:userUuid/apiKey` endpoint can be used to revoke the issued API. Only one API key is supported for one user. Generating a new API key will invalidate the previously issued key.
+icon:plus[] Auth: It is now possible to issue API keys via the `GET /api/v1/users/:userUuid/apiKey` endpoint. API keys do not expire and work in conjunction with the regular JWT authentication mechanism. These keys should only be used when SSL is enabled. The `DELETE /api/v1/users/:userUuid/apiKey` endpoint can be used to revoke the issued API. Only one API key is supported for one user. Generating a new API key will invalidate the previously issued key.
 
 icon:check[] GraphQL: An error was fixed which occurred when loading a node using a bogus uuid.
 
